ingress/mail-bot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mail-bot-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/subnets: 	subnet-08ac383bbe3cb67c1, subnet-09b63eb00e13a0ed2
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:885876711116:certificate/7203a957-d48a-4330-b227-52f1ead0f147
spec:
  ingressClassName: alb
  rules:
    - host: demo.admin.intemo.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mail-frontend-service
                port:
                  number: 7015
