ingress/mail-erp-connector-vnc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mail-erp-connector-bot-vnc-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/subnets: 	subnet-08ac383bbe3cb67c1, subnet-09b63eb00e13a0ed2
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:885876711116:certificate/4181742a-9aca-4456-9fa3-b3fac928e0ae
spec:
  ingressClassName: alb
  rules:
    - host: demo.vnc.bot.intemo.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: intemo-mail-erp-bot
                port:
                  number: 6080
