ingress/microservice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/subnets: 	subnet-0bdb392ca03107379, subnet-09498ad59e02273c9
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:885876711116:certificate/13394757-5284-4d9d-abc8-872acd0e27b8
spec:
  ingressClassName: alb
  rules:
    - host: demo.api.intemo.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: intemo-microservice-tracking-backend-service
                port:
                  number: 8080
