ingress/microservice-webhook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice-webhook-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/subnets: 	subnet-0bdb392ca03107379, subnet-09498ad59e02273c9
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:885876711116:certificate/c63f744f-d4e9-4138-ba24-46b9828e7dd4
spec:
  ingressClassName: alb
  rules:
    - host: demo.webhookapi.intemo.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: intemo-microservice-webhook-backend-service
                port:
                  number: 3050
