ingress/prometheus-expose.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/subnets: 	subnet-08ac383bbe3cb67c1, subnet-09b63eb00e13a0ed2
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:885876711116:certificate/ff2a3ca7-0b2d-402c-897a-2a04aa4932b7
spec:
  ingressClassName: alb
  rules:
    - host: prometheus.metrics-stag.intemo.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-monitoring-kube-promet-prometheus
                port:
                  number: 9090
